More animations/attempt to fix cannon

--- a/DefendBase10/Assembly-CSharp.csproj
+++ b/DefendBase10/Assembly-CSharp.csproj
@@ -56,6 +56,7 @@
   </ItemGroup>
   <ItemGroup>
      <Compile Include="Assets\ButtonAppear.cs" />
+     <Compile Include="Assets\Cannon.cs" />
      <Compile Include="Assets\Dialogue.cs" />
      <Compile Include="Assets\DialogueManager.cs" />
      <Compile Include="Assets\DialogueTrigger.cs" />
