Continued on buttons

--- a/DefendBase10/Assembly-CSharp.csproj
+++ b/DefendBase10/Assembly-CSharp.csproj
@@ -57,6 +57,7 @@
   <ItemGroup>
      <Compile Include="Assets\ButtonAppear.cs" />
      <Compile Include="Assets\ButtonsOnScreen.cs" />
+     <Compile Include="Assets\ButtonsOnScreen1.cs" />
      <Compile Include="Assets\Cannon.cs" />
      <Compile Include="Assets\Dialogue.cs" />
      <Compile Include="Assets\DialogueManager.cs" />
