--- a/DefendBase10/Assembly-CSharp.csproj
+++ b/DefendBase10/Assembly-CSharp.csproj
@@ -76,6 +76,7 @@
     <Compile Include="Assets\Spawner.cs" />
     <Compile Include="Assets\ToggleButtonManager.cs" />
     <Compile Include="Assets\Toggley.cs" />
+    <Compile Include="Assets\WaveSpawner.cs" />
     <Reference Include="UnityEngine">
       <HintPath>/Applications/Unity/Hub/Editor/2019.4.4f1/Unity.app/Contents/Managed/UnityEngine/UnityEngine.dll</HintPath>
     </Reference>
