--- a/DefendBase10/Assembly-CSharp.csproj
+++ b/DefendBase10/Assembly-CSharp.csproj
@@ -44,7 +44,6 @@
      <Compile Include="Assets\Demigiant\DOTween\Modules\DOTweenModuleUnityVersion.cs" />
      <Compile Include="Assets\Demigiant\DOTween\Modules\DOTweenModuleUtils.cs" />
      <Compile Include="Assets\ImageFade.cs" />
-     <Compile Include="Assets\LoadGame.cs" />
      <Compile Include="Assets\MuteScript.cs" />
      <Compile Include="Assets\Scripts\Banner.cs" />
      <Compile Include="Assets\Scripts\BuildingDie.cs" />
@@ -76,6 +75,7 @@
      <Compile Include="Assets\Scripts\WaveText.cs" />
      <Compile Include="Assets\SpriteSheet.cs" />
      <Compile Include="Assets\TitleScene.cs" />
+     <Compile Include="Assets\TitleSceneButton.cs" />
      <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
      <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Mobile Overlay.shader" />
      <None Include="Assets\TextMesh Pro\Shaders\TMP_Bitmap.shader" />
